system/services/infra/kubernetes/auth-service/service.yml
apiVersion: v1
kind: Service

metadata:
  name: auth-service

spec:
  selector:
    app: auth-service

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

  type: ClusterIP
