system/services/infra/kubernetes/auth-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service
spec:
  ingressClassName: nginx

  rules:
    - host: auth.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8080
